# backend/docs/swagger.yaml
@@ -62,6 +62,28 @@ definitions:
     - name
     - price
     type: object
+  dto.TransactionCreateRequest:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/dto.TransactionItemRequest'
+        type: array
+      notes:
+        type: string
+    required:
+    - items
+    type: object
+  dto.TransactionItemRequest:
+    properties:
+      menu_id:
+        type: integer
+      quantity:
+        minimum: 1
+        type: integer
+    required:
+    - menu_id
+    - quantity
+    type: object
   dto.UnitParamRequest:
     properties:
       name:
@@ -181,6 +203,51 @@ paths:
       summary: Update Menu
       tags:
       - Menus
+  /transactions:
+    get:
+      description: Get Transactions
+      responses: {}
+      summary: Get Transactions
+      tags:
+      - Transactions
+    post:
+      description: Create Transaction
+      parameters:
+      - description: Create transaction
+        in: body
+        name: transaction
+        required: true
+        schema:
+          $ref: '#/definitions/dto.TransactionCreateRequest'
+      responses: {}
+      summary: Create Transaction
+      tags:
+      - Transactions
+  /transactions/{id}:
+    delete:
+      description: Delete Transaction by ID (and restore stock)
+      parameters:
+      - description: Transaction ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses: {}
+      summary: Delete Transaction
+      tags:
+      - Transactions
+    get:
+      description: Get Transaction by ID
+      parameters:
+      - description: Transaction ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses: {}
+      summary: Get Transaction
+      tags:
+      - Transactions
   /units:
     get:
       description: Get Units
